--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,10 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": { "distDir": "build" }
     }
   ],
-  "outputDirectory": "dist",
+  "outputDirectory": "build",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
